force-app/main/default/objects/SalesorderLineProduct__c/SalesorderLineProduct__c.object-meta.xml
<CustomObject>
    <label>SalesorderLineProduct</label>
    <nameField>
        <displayFormat>SLiP-{000}</displayFormat>
        <label>SalesorderLine Product  No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesorderLineProducts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>