force-app/main/default/objects/SalesorderLineProduct__c/fields/Bal_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Bal_Quantity__c</fullName>
    <label>Bal Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>