force-app/main/default/objects/SalesorderLineProduct__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunitiescustom__c</referenceTo>
    <relationshipLabel>SalesorderLineProducts</relationshipLabel>
    <relationshipName>SalesorderLineProducts</relationshipName>
    <type>Lookup</type>
</CustomField>