force-app/main/default/objects/SalesorderLineProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>SalesorderLineProducts</relationshipLabel>
    <relationshipName>SalesorderLineProducts</relationshipName>
    <type>Lookup</type>
</CustomField>