force-app/main/default/objects/SalesorderLineProduct__c/fields/Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Name</label>
    <referenceTo>Quotes__c</referenceTo>
    <relationshipLabel>SalesorderLineProducts</relationshipLabel>
    <relationshipName>SalesorderLineProducts</relationshipName>
    <type>Lookup</type>
</CustomField>