force-app/main/default/objects/SalesorderLineProduct__c/fields/Salesorder_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesorder_Name__c</fullName>
    <label>Salesorder Name</label>
    <referenceTo>Salesorder__c</referenceTo>
    <relationshipLabel>SalesorderLineProducts</relationshipLabel>
    <relationshipName>SalesorderLineProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>